--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    
 }
 body {
     background-color: #0d204b;
@@ -32,15 +33,41 @@ body {
     text-align: center;
 }
 .content {
-    text-align: left;
-    margin: 30px;
+    
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
     padding: 20px;
 }
+.description {
+    text-align: left;
+}
+
 .form_section {
+    display: flex;
     margin: 30px;
     padding: 20px;
 }
 .form_section input {
     
     align-items: start;
+}
+
+.formulario {
+    display: flex;
+}
+form {
+    display: flex;
+    position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      margin-top: 100px;
+}
+
+.error {
+    color: red;
+    text-align: left;
+    font-size: 12px;
 }
