--- a/src/App.css
+++ b/src/App.css
@@ -60,10 +60,16 @@ body {
 form {
     display: flex;
     position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      margin-top: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 100px;
+    gap: 100px;
+}
+
+.dados_form  input{
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .error {
