--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
     
 }
 body {
     background-color: #0d204b;
 }
 .header {
+    position: fixed;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -24,8 +26,8 @@ body {
     transform: translate(-50%, -50%);
     background-color: #fff;
     width: 70vw;
-    height: 80vh;
-    margin: 20px;
+    height: 100vh;
+    margin-top: 150px;
 }
 .title {
     margin: 32px;
@@ -67,7 +69,7 @@ form {
     gap: 100px;
 }
 
-.dados_form  input{
+.dados_form  div{
     margin-bottom: 10px;
     margin-top: 10px;
 }
