--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
     background-color: #0d204b;
 }
 .header {
-    position: fixed;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -26,11 +25,10 @@ body {
     transform: translate(-50%, -50%);
     background-color: #fff;
     width: 70vw;
-    height: 100vh;
-    margin-top: 150px;
+    margin-top: 180px;
 }
 .title {
-    margin: 32px;
+    margin: 20px;
     padding: 10px;
     text-align: center;
 }
@@ -44,38 +42,52 @@ body {
 }
 .description {
     text-align: left;
+    margin-bottom: 10px;
 }
 
-.form_section {
-    display: flex;
-    margin: 30px;
-    padding: 20px;
-}
-.form_section input {
-    
-    align-items: start;
-}
 
-.formulario {
-    display: flex;
-}
+
 form {
     display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 100px;
-    gap: 100px;
+    justify-content: center;
+    align-items: center;   
 }
 
+.dados_form{
+    display: flex;
+    gap: 50px;   
+    margin: 20px; 
+}
 .dados_form  div{
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 8px;
+    margin-top: 8px;
+}
+
+.first_section input {
+    padding: 8px;
+    
+    
+}
+
+.second_section  select, input{
+    padding: 8px;
 }
 
 .error {
     color: red;
     text-align: left;
     font-size: 12px;
+}
+
+.generatePDF button{
+    padding: 12px;
+    border-radius: 12px;
+    width: 120px;
+    margin-top: 20px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.generatePDF button:hover {
+    background-color: #d1d0d0;
 }
