--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    border-radius: 12px;
     
 }
 body {
@@ -12,6 +13,7 @@ body {
     width: 100%;
     justify-content: center;
     background-color: #fff;
+    margin-bottom: 40px;
 }
 .logo img {
     display: flex;
@@ -19,17 +21,15 @@ body {
     padding: 16px;
 }
 .main-container {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
+  
+   
     background-color: #fff;
     width: 70vw;
-    margin-top: 180px;
 }
 .title {
     margin: 20px;
-    padding: 10px;
+    padding: 40px;
     text-align: center;
 }
 .content {
@@ -53,8 +53,14 @@ form {
     align-items: center;   
 }
 
-.dados_form{
+.form_table {
     display: flex;
+    gap: 20px;
+}
+.form_table select {
+    margin: 8px;
+}
+.dados_form{
     gap: 50px;   
     margin: 20px; 
 }
@@ -63,16 +69,29 @@ form {
     margin-top: 8px;
 }
 
-.first_section input {
-    padding: 8px;
-    
-    
-}
-
 .second_section  select, input{
     padding: 8px;
 }
-
+.select_form {
+    width: 200px;
+   
+}
+.table_destino {
+    display: flex;
+    gap: 110px;
+}
+.table_destino p {
+    margin-top: 28px;
+}
+.result-container{
+    border: 1px solid #d1d0d0;
+    padding: 20px;
+    line-height: 30px;
+}
+.btn-destino button{
+    padding: 10px;
+    margin: 10px;
+}
 .error {
     color: red;
     text-align: left;
