--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,14 @@ form {
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
 .form_table {
     display: flex;
     gap: 20px;
+    margin: auto;
 }
 
 .form_table select {
@@ -91,7 +94,9 @@ input {
     display: flex;
     gap: 110px;
 }
-
+#numeroDiarias {
+    width: 100px;
+}
 .table_destino p {
     margin-top: 28px;
 }
@@ -128,7 +133,7 @@ input {
     cursor: pointer;
     font-size: 20px;
 }
-.error {
+.errorMessage {
     color: red;
     text-align: left;
     font-size: 12px;
@@ -156,4 +161,97 @@ input {
 .pdfButton:hover {
     background-color: #3f3c3c;
     color: #fff;
+}
+
+
+@media(max-width: 768px) {
+    .title {
+     font-size: 12px;
+     padding-bottom: 12px;
+    }
+    .formulario {
+     font-size: 12px;
+     font-weight: bold;
+    }
+   .form_table {
+     display: block;
+     width: 100%; 
+     margin-left: auto;
+     margin-right: auto;   
+   }
+   .form_table input{
+     text-align: center;
+     margin-bottom: 12px;
+   }
+   .form_table div {
+     text-align: center;
+   }
+   .form_table .textarea {
+     margin-top: 28px;
+   }
+  
+   textarea {
+     width: 200px;
+   }
+   .second_section .form_table{
+     margin-top: 28px;
+   }
+ 
+   #municipios, #estado {
+     width: 140px;
+   }
+   .destinoDiv {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+   }
+   .numerodiarias input{
+     width: 120px;
+   }
+   .btn-destino {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+   }
+   .btn-destino button {
+     width: 100px;
+     padding: 8px;
+     font-size: 12px;
+     margin-bottom: 20px;
+   }
+   .result-container{
+     padding: 60px;
+  
+   }
+   .generatePDF{
+     display: flex;
+     justify-content: center;
+     padding-top: 4px;
+   }
+  
+ }
+
+@media(max-width: 425px) {
+    * {
+        font-size: 12px;
+    }
+    .form_table label {
+        font-size: 10px;
+    }
+    .form_table input {
+        width: 140px;
+    }
+    .result-container {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 16px;
+    }
+    .trashIcon {
+        border: none;
+        margin-top: 4px;
+        cursor: pointer;
+        font-size: 16px;
+    }
 }
