--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,12 @@ form {
     margin-top: 8px;
 }
 
+#tipoCargo {
+    width: 200px;
+    padding: 8px;
+    margin: 0 0px;
+}
+
 .second_section select,
 input {
     padding: 8px;
@@ -141,7 +147,7 @@ input {
 
 
 #estado {
-    width: 100px;
+    width: 200px;
 }
 
 #municipios {
@@ -152,7 +158,7 @@ input {
 }
 .pdfButton {
     background-color: #d1d0d0;
-    margin: 20px;
+    margin: 32px 0;
     cursor: pointer;
     padding: 16px;
     text-decoration: none;
